# FYP

./: .gitignore  README.md  fyp.ipynb  neuron_params.py  project.ipynb  thesis.ipynb  weights.py
.ipynb_checkpoints/: fyp-checkpoint.ipynb  gradient-detector-checkpoint.ipynb  thesis-checkpoint.ipynb
fyp-hardware-simulation/: TSL2591.py  final.py  test_sensors.py
fyp-networking-snn/: README.md  pyproject.toml  requirements.txt
fyp-networking-snn/app/: comparator.py  currentInputGen.py  currentKernal.py  gradientDetector.py  main.py  neuron_params.py  pcm_weights.py  server.py  simulateLIF.py
fyp-software-simulation/: .eslintrc.js  README.md  package.json  tsconfig.json  webpack.config.dev.js
fyp-software-simulation/src/: CEChain.ts  CESeg.ts  index.ts
fyp-software-simulation/src/brain/: index.ts
fyp-software-simulation/src/constants/: index.ts
fyp-software-simulation/src/draw/: index.ts
